2008-09-03  Ben Abbott <bpabott@mac.com>

	* mappers.cc: Use eps(single) as tolerance for single precesion test.

2008-09-03  John W. Eaton  <jwe@octave.org>

	* variables.cc (mlock): Lock current function on the call stack.
	(Fmlock): Lock caller.

	* symtab.cc (out_of_date_check_internal): If dispatch type is set,
	check for method.  If that fails, check for regular function. 

2008-09-02  Michael Goffioul  <michael.goffioul@gmail.com>

	* graphics.cc (hggroup::update_axis_limits): Also reacts on
	[xyzac]liminclude changes.

2008-08-31  Michael Goffioul  <michael.goffioul@gmail.com>

	* DLD-FUNCTIONS/fltk_backend.cc (fltk_backend::redraw_figure,
	fltk_backend::print_figure): Change graphics_handle argument to
	graphics_object.

2008-08-29  David Bateman  <dbateman@free.fr>

	* src/graphics.cc: Replace int by octave_idx_type in multiple
	places.
	(array_property::is_equal): In macro CHECK_ARRAY_EQUAL, special
	case scalar case and keep copy of array value to avoid early
	destruction of converted array values.
	
2008-08-28  David Bateman  <dbateman@free.fr>

	* graphics.h.in (root_figure::properties::showhiddenhandles):
	New property.

2008-08-27  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/__glpk__.cc (F__glpk__): Initialize output vectors 
	by NA value.

2008-08-26 Ben Abbott <bpabott@mac.com>

	* mappers.cc: Adjust tolerance for single precesion tests.

	* DLD-FUNCTIONS/chol.cc: Double tolerance.

2008-08-26  Jaroslav Hajek <highegg@gmail.com>

	* parse.y (Fassignin): Use default  scope when calling varref.

2008-08-26  Michael Goffioul  <michael.goffioul@gmail.com>

	* genprops.awk (emit_declarations): Call updaters/listeners only when
	'set' method returned true.
	* graphics.h.in (base_property::set, base_property::do_set):
	Return bool value.
	(property::set): Likewise.
	(string_property::do_set): Check value change and return bool value.
	(radio_property::do_set, double_property::do_set,
	array_property::do_set): Likewise.